<resources>
    <string name="app_name">FoodApp</string>
    <string name="name_title">Food for</string>
    <string name="name_logan">Everyone</string>
    <string name="btn_get">Get starteed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_titleHi">Hi Nguyễn Minh Nhật</string>
    <string name="txt_oder">Eat and Oder</string>
    <string name="txt_food_lottie">Food Speed</string>
    <string name="title_activity_cart">CartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>