<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SplashActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF4B3A">
        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:src="@drawable/icon_app"
            app:layout_constraintStart_toStartOf="@+id/imgBg"
            app:layout_constraintTop_toTopOf="@+id/imgBg"/>
        <TextView
            android:id="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/imgBg"
            android:text="@string/name_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_30ssp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_logan"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:text="@string/name_logan"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_30ssp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/face2"
            android:layout_marginRight="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logan"/>
        <ImageView
            android:id="@+id/face1"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_280sdp"
            android:layout_marginTop="36dp"
            android:src="@drawable/face1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logan"/>

        <TextView
            android:id="@+id/tvgetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/back_tv"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/btn_get"
            android:textColor="#ff4b3a"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>