<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.HomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/txt_titleHi"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/txt_oder"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvhi"
                    app:layout_constraintTop_toBottomOf="@+id/tvhi" />

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/back_edit"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="Search"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container1"
                    android:layout_width="330dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/back_lotie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editSearch">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie"
                        android:layout_width="299dp"
                        android:layout_height="126dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/foodl"
                        app:lottie_repeatMode="reverse"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="9dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/txt_food_lottie"
                        android:textColor="#bf1f6a"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="@+id/lottie"
                        app:layout_constraintTop_toTopOf="@+id/lottie" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_Categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="Categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_Categories"
                    android:layout_width="382dp"
                    android:layout_height="69dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Categories" />

                <TextView
                    android:id="@+id/tv_Popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="Popular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rc_Categories" />

                <TextView
                    android:id="@+id/tv_SeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:text="SeeMore"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/rc_Popular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rc_Categories" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_Popular"
                    android:layout_width="381dp"
                    android:layout_height="308dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Popular" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabCradleMargin="@dimen/_5sdp"
                app:fabCradleRoundedCornerRadius="@dimen/_40sdp"
                app:fabCradleVerticalOffset="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:id="@+id/HomeBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_home" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Home" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Info" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_support_agent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Support" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/CaiDatMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_settings" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Setting" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.bottomappbar.BottomAppBar>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/IdPrice_Cart"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            app:elevation="@dimen/_3sdp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/back_price_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bottom_bar"
            app:layout_constraintStart_toStartOf="@+id/bottom_bar">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#C13346"
                android:src="@drawable/ic_baseline_shopping_cart_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>